src/types/tests/snapshots/tgbot__types__tests__message__gift_upgrade_sent.snap
---
source: src/types/tests/message.rs
expression: expected_struct
---
{
  "chat": {
    "type": "supergroup",
    "id": 1,
    "title": "Chat"
  },
  "date": 1,
  "has_protected_content": false,
  "message_id": 1,
  "is_automatic_forward": false,
  "from": {
    "first_name": "User",
    "id": 1,
    "is_bot": false
  },
  "gift_upgrade_sent": {
    "gift": {
      "id": "id",
      "star_count": 100,
      "sticker": {
        "file_id": "file-id",
        "file_unique_id": "file-unique-id",
        "height": 512,
        "is_animated": false,
        "is_video": false,
        "type": "regular",
        "width": 512
      }
    }
  }
}
