src/types/tests/snapshots/tgbot__types__tests__message__group_chat.snap
---
source: src/types/tests/message.rs
expression: expected_struct.clone()
---
{
  "chat": {
    "type": "group",
    "id": 1,
    "title": "Group"
  },
  "date": 0,
  "has_protected_content": false,
  "message_id": 1,
  "is_automatic_forward": false,
  "from": {
    "first_name": "User",
    "id": 1,
    "is_bot": false,
    "username": "test"
  }
}
